--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
  - sudo apt-get install qt5-default qttools5-dev-tools
 
 script:
- - qmake -project
+ - qmake SquareFinder.pro
  - make CXXFLAGS+=" -std=c++11" LFLAGS+=" -std=c++11"
